@@ -3,6 +3,7 @@ plugins {
     id 'org.springframework.boot' version '3.5.5'
     id 'io.spring.dependency-management' version '1.1.7'
     id 'org.springdoc.openapi-gradle-plugin' version '1.9.0'
+    id 'org.flywaydb.flyway' version '9.22.1'
 }
 
 group = 'clf.integra'
@@ -15,39 +16,59 @@ java {
     }
 }
 
+configurations {
+    mockitoAgent
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation 'org.springframework:spring-web:6.2.10'
+    // Spring
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    // Postgres
+    runtimeOnly 'org.postgresql:postgresql'
+    // Lombok
     implementation 'org.springframework.boot:spring-boot-starter-security'
     testImplementation 'org.springframework.security:spring-security-test'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    testCompileOnly 'org.projectlombok:lombok'
+    testAnnotationProcessor 'org.projectlombok:lombok'
+    // Open API
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    runtimeOnly 'org.postgresql:postgresql'
-
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
+    // Junit + Mockito
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-
-    testImplementation 'org.mockito:mockito-core:5.1.1'
-    testImplementation 'org.mockito:mockito-junit-jupiter:5.1.1'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.+'
+    testImplementation "org.mockito:mockito-core:5.+"
+    testImplementation "org.mockito:mockito-inline:5.2.0"
+    mockitoAgent('org.mockito:mockito-core:5.14.0') {
+        transitive = false
+    }
+    // Flyway
+    implementation "org.flywaydb:flyway-core:11.0.0"
+    implementation 'org.flywaydb:flyway-database-postgresql'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+tasks {
+    test {
+        jvmArgs += "-javaagent:${configurations.mockitoAgent.asPath}"
+        jvmArgs += ["-XX:+EnableDynamicAgentLoading"]
+    }
 }
 
 openApi {
